# loader-public

./: .coverage  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  check_iostar_json.py  dance_test_json.py  editor.py  export_show_user_simulation.json  export_show_user_simulation.py  export_simulation.py  generate_circle_test.py  generate_color_interpolation.py  generate_crash_tests.py  generate_iostar_json.py  generate_precision_landing.py  generate_size_test.py  generate_up_down_test.py  iostar3_platform_takeoff_valid.json  iostar_json_gcs_collision.json  iostar_json_gcs_dance_size.json  iostar_json_gcs_performance.json  iostar_json_gcs_reference.json  iostar_json_gcs_valid.json  iostar_json_gcs_valid_rotated.json  iostar_json_gcs_valid_with_step_arg.json  json_manager.py  pyproject.toml  vviz_conversion.py
.github/workflows/: ci.yml
drones_manager/drone/events/: events.py  position_events.py
family_manager/: family_manager.py
json_convertor/: json_convertor.py
loader/: __init__.py  editor.py  report.py
loader/check/: __init__.py  all_check_from_show_user.py
loader/check/collision_check/: collision_math.py  show_position_frames_collision_check.py  show_simulation_collision_check.py
loader/check/performance_check/: performance_evaluation.py  show_trajectory_performance_check.py
loader/check/show_px4_check/: __init__.py  show_px4_check.py
loader/check/show_user_check/: __init__.py  show_user_check.py
loader/check/simulation/: flight_simulation.py  in_dance_flight_simulation.py  land_simulation.py  position_simulation.py  takeoff_simulation.py
loader/parameter/: iostar_physic_parameter.py
loader/parameter/iostar_dance_import_parameter/: frame_parameter.py  json_binary_parameter.py
loader/parameter/iostar_flight_parameter/: iostar_land_parameter.py  iostar_takeoff_parameter.py
loader/parameters/: __init__.py  frame_parameters.py  iostar_land_parameters.py  iostar_physic_parameters.py  iostar_takeoff_parameters.py  json_binary_parameters.py
loader/report/: global_report.py  report.py  takeoff_format_report.py
loader/report/autopilot_format_report/: __init__.py  autopilot_format_report.py  dances_size_infraction.py  dances_size_report.py
loader/report/collision_report/: collision_infraction.py  collision_math.py  collision_report.py  show_position_frames_collision_report.py
loader/report/performance_report/: performance_evaluation.py  performance_report.py  show_trajectory_performance_report.py
loader/report/simulation/: flight_simulation.py  in_dance_flight_simulation.py  land_simulation.py  position_simulation.py  stand_by_simulation.py  takeoff_simulation.py
loader/report/takeoff_format_report/: __init__.py  takeoff_format_report.py
loader/reports/: __init__.py  base.py  dance_size_report.py  global_report.py  ranges.py  takeoff_format_report.py
loader/schemas/: __init__.py  matrix.py  metadata.py  vviz.py
loader/show_env/: show_position_frame.py
loader/shows/: __init__.py  show_trajectory_performance.py
parameter/: export_setup.json  iostar_setup.json  parameter.py
procedure/: export_procedure.py  export_report.py
procedure/json_creation/: json_creation_procedure.py
show_simulation/dance_simulation/: dance_simulation.py  flight_simulation.py  land_setup.py  land_simulation.py  takeoff_setup.py
src/: editor.py  export_procedure.py  import_procedure.py  report.py  test_editor.py  test_export_procedure.py  test_report.py
src/binary_px4/: binary.py
src/check/: all_check_from_show_px4_procedure.py  all_check_from_show_user.py  all_check_from_show_user_procedure.py  export_procedure.py  import_procedure.py  import_report.py  show_check_procedure.py  show_check_report.py  test_apply_all_check_from_show_user.py  test_apply_all_check_from_user_procedure.py  test_export_procedure.py
src/drones_manager/: altitude_range_test.py  convex_hull.py  convex_hull_test.py  drones_manager.py  show_duration_test.py
src/drones_px4/: convex_hull.py  drones_px4.py  drones_user.py  test_altitude_range.py  test_convex_hull.py  test_show_duration.py
src/drones_px4/drone/: drone.py  (+1 more)
src/drones_user/: altitude_range_test.py  convex_hull_test.py  drones_user.py  show_duration_test.py  test_altitude_range.py
src/family_manager/: family_manager.py
src/family_user/: family_user.py
src/iostar_json/: iostar_json.py  iostar_json_gcs.py  show_configuration.py
src/iostar_json_gcs/: iostar_json_gcs.py
src/json_convertor/: drone_encoder.py  events_encoder.py  json_convertor.py
src/parameter/: blender_setup.json  export_setup.json  family_setup.json  iostar_physic_parameter.py  iostar_setup.json  parameter.py
src/procedure/: export_procedure.py  export_report.py  import_procedure.py  import_procedure_test.py  import_report.py  report.py  show_check_procedure.py  show_check_report.py  test_export_procedure.py  test_import_procedure.py
src/report/: report.py  test_report.py
src/show_dev/: show_dev.py
src/show_px4/: convex_hull.py  show_px4.py  test_altitude_range.py  test_convex_hull.py  test_show_duration.py
src/show_simulation/: convex_hull.py  drone_simulation.py  show_simulation.py  test_altitude_range.py  test_convex_hull.py  test_show_duration.py  trajectory_simulation.py
src/show_trajectory/: show_trajectory.py
src/show_trajectory_collision/: show_trajectory_collision.py
src/show_trajectory_performance/: show_trajectory_performance.py
src/show_user/: show_user.py  show_user_generator.py  show_user_simulation.py
tests/: test_editor.py  test_readme.py
tests/check/: test_apply_all_check_from_show_user.py
tests/parameter/: test_iostar_land_parameters.py  test_json_binary_parameters.py
tests/parameters/: test_frame_parameters.py  test_iostar_land_parameters.py  test_iostar_takeoff_parameters.py  test_json_binary_parameters.py
tests/report/: test_base.py  test_global_report.py  test_report.py
tests/reports/: test_base.py  test_global_report.py  test_ranges.py
tests/schemas/: test_vviz.py
tests/show_env/: test_show_position_frame.py
tests/strategies/: __init__.py
(+890 files in other folders)
